# EvoTune

./: .gitignore  README.md  dataset  pyproject.toml  test.txt
configs/: config.yaml
configs/model/: qwen25.yaml
configs/sweep/: example_eval_sweep_config.csv  example_train_sweep_config.csv
configs/task/: bin.yaml  flatpack.yaml  tsp.yaml
configs/train/: dpo.yaml  none.yaml
data/: inspect_pickle.py
outputs/note/: note.txt
scripts/: run_eval_sweep_example.sh  run_train_sweep_example.sh
src/: README.md
src/eval/: README.md  run_all.py
src/eval/bp/: README.md  baselines.py  best_priority.py  data.py  run_eval.py  solver.py
src/eval/bp/results/: OR3_val_instances.csv  OR3_val_summary.json
src/eval/fp/: README.md  baselines.py  best_priority.py  data.py  evaluator.py  run_eval.py
src/eval/fp/results/: test_flatpack_dynamic_0_seed_instances.csv  test_flatpack_dynamic_0_seed_summary.json
src/eval/results/: comparison_table.csv  report.md  summary.json
src/eval/tsp/: README.md  best_heuristic.py  data.py  gls_solver.py  run_eval.py
src/eval/tsp/__pycache__/: gls_solver._calculate_cost-82.py311.1.nbc  gls_solver._calculate_cost-82.py311.nbi  gls_solver._guided_local_search-151.py311.1.nbc  gls_solver._guided_local_search-151.py311.nbi  gls_solver._init_nearest_neighbor-132.py311.1.nbc  gls_solver._init_nearest_neighbor-132.py311.nbi  gls_solver._local_search-90.py311.1.nbc  gls_solver._local_search-90.py311.nbi  gls_solver._perturbation-103.py311.1.nbc  gls_solver._perturbation-103.py311.nbi  gls_solver._relocate_once-44.py311.1.nbc  gls_solver._relocate_once-44.py311.nbi  gls_solver._two_opt_once-14.py311.1.nbc  gls_solver._two_opt_once-14.py311.nbi
src/eval/tsp/results/: test_instances.csv  test_summary.json
src/experiments/: eval.py  main.py
src/experiments/run/: bp_or3.sh  bp_weibull.sh  fp_custom_dataset.sh  fp_default.sh  tsp.sh
src/experiments/sweeps/: gen_sweep_configs.py  gen_sweep_configs_eval.py
src/packing/evaluate/: README.md  __init__.py  registry.py
src/packing/evaluate/bin_packing/: bin_datasets.py  task_bin.py
src/packing/evaluate/flat_pack/: benchmark_heuristics_for_flatpack.py  generate_perturbed_instances.py
src/packing/evaluate/tsp/: task_tsp.py  tsp_generate_dataset.py
src/packing/evaluate/tsp/__pycache__/: task_tsp._calculate_cost-156.py311.1.nbc  task_tsp._calculate_cost-156.py311.nbi  task_tsp._guided_local_search-234.py311.1.nbc  task_tsp._guided_local_search-234.py311.nbi  task_tsp._init_nearest_neighbor-215.py311.1.nbc  task_tsp._init_nearest_neighbor-215.py311.nbi  task_tsp._local_search-164.py311.1.nbc  (+7 more)
src/packing/funsearch/: programs_database.py
src/packing/logging/: function_class.py  log_to_file.py  logging.py
src/packing/model/: learning_rate.py  model.py  prompt.py
src/packing/parallel/: continuous_execution.py  memory_watcher.py  stoppable_task.py
src/packing/train/: train.py
src/packing/train/dpo/: dpo.py  dpo_dataset.py
src/packing/utils/: dataset_utils.py  functions.py  seeding.py  vllm.py
wandb/: latest-run
wandb/offline-run-20260302_193210-chvsv4n0/files/: requirements.txt
wandb/offline-run-20260302_193639-x4eixqka/: run-x4eixqka.wandb
wandb/run-20260302_192853-swcekyxr/: run-swcekyxr.wandb
wandb/run-20260302_193109-cz5cqr1s/: run-cz5cqr1s.wandb
wandb/run-20260303_100541-7fs9y3hp/: run-7fs9y3hp.wandb
wandb/run-20260303_100932-q2uh02ie/: run-q2uh02ie.wandb
wandb/run-20260303_101107-nwxkrccy/: run-nwxkrccy.wandb
wandb/run-20260303_101107-nwxkrccy/files/: config.yaml  wandb-metadata.json  wandb-summary.json
wandb/run-20260303_101702-4ob87ync/: run-4ob87ync.wandb
wandb/run-20260303_101702-4ob87ync/files/: wandb-metadata.json
wandb/run-20260303_102009-kqzifbxt/: run-kqzifbxt.wandb
wandb/run-20260303_102009-kqzifbxt/files/: config.yaml  wandb-metadata.json  wandb-summary.json
wandb/run-20260303_102157-8wn4zko5/: run-8wn4zko5.wandb
wandb/run-20260303_102157-8wn4zko5/files/: config.yaml  wandb-metadata.json
wandb/run-20260303_102245-xqp5rpl5/files/: wandb-metadata.json
wandb/run-20260303_111113-pay8rkxe/: run-pay8rkxe.wandb
wandb/run-20260303_111544-3shhtz98/: run-3shhtz98.wandb
wandb/run-20260303_111544-3shhtz98/files/: config.yaml  wandb-metadata.json  wandb-summary.json
wandb/run-20260303_112528-v1st97hp/: run-v1st97hp.wandb
wandb/run-20260303_112528-v1st97hp/files/: config.yaml  wandb-metadata.json  wandb-summary.json
wandb/run-20260303_113449-66eojs6s/: run-66eojs6s.wandb
wandb/run-20260303_113449-66eojs6s/files/: config.yaml  requirements.txt  wandb-metadata.json  wandb-summary.json
wandb/run-20260303_113728-796iojfo/: run-796iojfo.wandb
wandb/run-20260303_113728-796iojfo/files/: config.yaml  wandb-metadata.json  wandb-summary.json
wandb/run-20260303_114011-0ukc4zgv/: run-0ukc4zgv.wandb
wandb/run-20260303_114011-0ukc4zgv/files/: config.yaml  wandb-metadata.json  wandb-summary.json
wandb/run-20260303_125144-vrlbwoo5/: run-vrlbwoo5.wandb
wandb/run-20260303_125144-vrlbwoo5/files/: config.yaml  wandb-metadata.json  wandb-summary.json
wandb/run-20260303_125350-33m3zxdr/: run-33m3zxdr.wandb
wandb/run-20260303_125350-33m3zxdr/files/: wandb-metadata.json
wandb/run-20260303_130127-nnb2wmvl/: run-nnb2wmvl.wandb
wandb/run-20260303_130127-nnb2wmvl/files/: config.yaml  wandb-metadata.json  wandb-summary.json
wandb/run-20260303_132943-2plgjnim/: run-2plgjnim.wandb
wandb/run-20260303_132943-2plgjnim/files/: config.yaml  wandb-metadata.json  wandb-summary.json
wandb/run-20260303_152026-d57hb4sf/: run-d57hb4sf.wandb
wandb/run-20260303_152026-d57hb4sf/files/: config.yaml  wandb-metadata.json  wandb-summary.json
wandb/run-20260303_152712-irj4m6km/: run-irj4m6km.wandb
wandb/run-20260303_152712-irj4m6km/files/: wandb-metadata.json
wandb/run-20260303_153109-qqwnjl9h/files/: wandb-metadata.json
wandb/run-20260303_153408-8971ur11/files/: wandb-metadata.json
wandb/run-20260303_172025-nu2xwrvh/: run-nu2xwrvh.wandb
wandb/run-20260303_172025-nu2xwrvh/files/: config.yaml  wandb-metadata.json  wandb-summary.json
