[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "packing"
readme = "README.md"
license = { file = "LICENSE" }
version = "0.0.1"
requires-python = ">=3.10,<3.13"
dependencies = [
    "absl-py",
    "accelerate",
    "datasets",
    "elkai",
    "huggingface-hub>=0.34,<1",
    "hydra-core",
    "matplotlib==3.7.5",
    "contourpy==1.1.1",
    "numba",
    "numpy",
    "omegaconf",
    "peft",
    "psutil",
    "requests",
    "scipy",
    "torch==2.5.1",
    "tqdm",
    "transformers",
    "trl",
    "wandb==0.19.11",
]

[tool.hatch.build.targets.wheel]
packages = ["src/packing"]

[tool.isort]
known_third_party = ["wandb"]
